Perkin-UAT/force-app/main/default/objects/SalesOrgJunction__c/SalesOrgJunction__c.object-meta.xml
<CustomObject>
    <description>Joins Sales Org object and Account</description>
    <label>Sales Org Junction</label>
    <nameField>
        <displayFormat>SOJ-{000000000}</displayFormat>
        <label>Sales Org Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Org Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>