Perkin-UAT/force-app/main/default/objects/SalesOrgJunction__c/fields/Date_Lookups_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Date_Lookups_Last_Modified__c</fullName>
    <description>Used in the UpdateSOJAutomated.apxc to determine whether or not to include this record again.</description>
    <inlineHelpText>Used in the UpdateSOJAutomated.apxc to determine whether or not to include this record again.</inlineHelpText>
    <label>Date Lookups Last Modified</label>
    <type>Date</type>
</CustomField>