Perkin-UAT/force-app/main/default/objects/SalesOrgJunction__c/fields/PKI_SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Customer_Number__c</fullName>
    <label>PKI SAP Customer Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>