Perkin-UAT/force-app/main/default/objects/SalesOrgJunction__c/fields/PKI_SAP_Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Partner_Type__c</fullName>
    <inlineHelpText>This field is used only when joining Sold-To/Ship-To records to Sales Org records</inlineHelpText>
    <label>PKI SAP Partner Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>