Perkin-UAT/force-app/main/default/objects/SalesOrgJunction__c/fields/Related_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Related_Accounts__c</fullName>
    <label>Related Accounts</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orgs</relationshipLabel>
    <relationshipName>Sales_Org</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>