Perkin-UAT/force-app/main/default/objects/SalesOrgJunction__c/fields/Related_Sales_Orgs__c.field-meta.xml
<CustomField>
    <fullName>Related_Sales_Orgs__c</fullName>
    <label>Related Sales Orgs</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>Related SAP Customer Accounts</relationshipLabel>
    <relationshipName>Related_Customer_Accounts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>