Perkin-UAT/force-app/main/default/objects/SalesOrgJunction__c/fields/SOJ_Key__c.field-meta.xml
<CustomField>
    <fullName>SOJ_Key__c</fullName>
    <description>Combination of the Customer Number or Hierarchy Number, Sales Org, and Partner Type</description>
    <externalId>true</externalId>
    <inlineHelpText>Combination of the Customer Number or Hierarchy Number, Sales Org, and Partner Type</inlineHelpText>
    <label>SOJ Key</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>