Perkin-UAT/force-app/main/default/objects/SalesOrgJunction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PKI_SAP_Sales_Org__c</columns>
    <columns>Related_Sales_Orgs__c</columns>
    <columns>PKI_SAP_Customer_Number__c</columns>
    <columns>Related_Accounts__c</columns>
    <columns>PKI_SAP_Partner_Type__c</columns>
    <columns>SOJ_Key__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>